# ackerman_ros_robot_gazebo_simulation

./: README.md  git_sync.sh
ace_viz/: CMakeLists.txt  package.xml
ace_viz/launch/: view_model.launch  view_robot.launch
ace_viz/rviz/: robot.rviz
ackermann-drive-teleop/: package.xml
ackermann-drive-teleop/launch/: ackermann_drive_joyop.launch
ackermann-drive-teleop/scripts/: joyop.py
custom_controllers/ackermann-drive-teleop/: CMakeLists.txt  README.md
custom_controllers/ackermann-drive-teleop/scripts/: joyop.py  keyop.py
custom_controllers/obstacle_detector/launch/: ACE.launch
custom_controllers/obstacle_detector/resources/: obstacle_detector.rviz
custom_controllers/teb_local_planner_tutorials/launch/: robot_carlike_in_stage.launch
rbcar_common/: README.md
rbcar_common/rbcar_common/: CHANGELOG.rst  CMakeLists.txt  package.xml
rbcar_common/rbcar_description/: CHANGELOG.rst  CMakeLists.txt  mybot.plugins.xacro  package.xml  rbcar.urdf.xacro
rbcar_common/rbcar_description/launch/: rbcar.rviz  rbcar_rviz.launch  rbcar_state_robot.launch
rbcar_common/rbcar_description/meshes/bases/: rbcar_chassis.dae  rbcar_chassis.stl  rbcar_chassis_v2.STL
rbcar_common/rbcar_description/meshes/wheels/: rbcar_wheel1.dae  rbcar_wheel1.stl  rbcar_wheel2.dae  rbcar_wheel2.stl
rbcar_common/rbcar_description/robots/: rbcar.urdf.xacro  rbcar_.urdf.xacro
rbcar_common/rbcar_description/robots/to-be-deleted/: rbcar.urdf
rbcar_common/rbcar_description/urdf/bases/: rbcar_base.gazebo.xacro  rbcar_base.urdf.xacro
rbcar_common/rbcar_description/urdf/bases/to-be-deleted/: rbcar_base.urdf.xacro
rbcar_common/rbcar_description/urdf/wheels/: suspension_wheel.urdf.xacro
rbcar_common/rbcar_description/urdf/wheels/to-be-deleted/: suspension_wheel.urdf.xacro
rbcar_common/rbcar_localization/: CMakeLists.txt  package.xml
rbcar_common/rbcar_localization/launch/: amcl.launch  map_server.launch  (+2 more)
rbcar_common/rbcar_navigation/: CMakeLists.txt  package.xml
rbcar_common/rbcar_pad/: CHANGELOG.rst  CMakeLists.txt  package.xml
rbcar_common/rbcar_pad/launch/: ps3.yaml  ps4.yaml  rbcar_pad.launch
rbcar_common/rbcar_pad/src/: rbcar_pad.cpp
rbcar_common/robotnik_msg/: CHANGELOG.rst  CMakeLists.txt  README.md
rbcar_common/robotnik_msgs/: package.xml
rbcar_common/robotnik_msgs/msg/: AlarmSensor.msg  Alarms.msg  Axis.msg  BatteryStatus.msg  BatteryStatusStamped.msg  Data.msg  ElevatorAction.msg  ElevatorStatus.msg  LaserMode.msg  LaserStatus.msg  MotorPID.msg  MotorStatus.msg  MotorsStatusDifferential.msg  OdomCalibrationStatus.msg  OdomCalibrationStatusStamped.msg  OdomManualCalibrationStatusStamped.msg  Pose2DArray.msg  PresenceSensor.msg  PresenceSensorArray.msg  QueryAlarm.msg  RobotnikMotorsStatus.msg  SafetyModuleStatus.msg  StringArray.msg  StringStamped.msg  SubState.msg  alarmsmonitor.msg  inputs_outputs.msg
rbcar_common/robotnik_msgs/srv/: GetMotorsHeadingOffset.srv  GetPOI.srv  ResetFromSubState.srv  SetByte.srv  SetElevator.srv  SetLaserMode.srv  SetMotorMode.srv  SetMotorPID.srv  SetNamedDigitalOutput.srv  SetString.srv  SetTransform.srv  ack_alarm.srv  get_digital_input.srv  get_modbus_register.srv  get_mode.srv  set_float_value.srv  set_modbus_register.srv  set_named_digital_output.srv  set_ptz.srv
rbcar_common/robotnik_sensors/: CHANGELOG.rst  README.md
rbcar_sim/: README.md
rbcar_sim/rbcar_control/: CHANGELOG.rst  CMakeLists.txt  package.xml
rbcar_sim/rbcar_control/config/: rbcar_control.yaml
rbcar_sim/rbcar_control/launch/: rbcar_control.launch
rbcar_sim/rbcar_gazebo/: CHANGELOG.rst  CMakeLists.txt  package.xml
rbcar_sim/rbcar_gazebo/launch/: rbcar.launch  rbcar_gs.launch
rbcar_sim/rbcar_gazebo/worlds/: bosch.world  rbcar.world  rbcar_gs.world  road.world  roadworld.world  simple_city.world  vrc_task3_firehose_start.world
rbcar_sim/rbcar_joystick/: CHANGELOG.rst  CMakeLists.txt  package.xml
rbcar_sim/rbcar_joystick/launch/: ps3.yaml  rbcar_joystick.launch
rbcar_sim/rbcar_joystick/src/: rbcar_joystick.cpp
rbcar_sim/rbcar_robot_control/: CHANGELOG.rst  CMakeLists.txt  package.xml
rbcar_sim/rbcar_robot_control/config/: rbcar.yaml
rbcar_sim/rbcar_robot_control/launch/: rbcar_robot_control.launch
rbcar_sim/rbcar_robot_control/src/: rbcar_robot_control.cpp
rbcar_sim/rbcar_sim_bringup/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
rbcar_sim/rbcar_sim_bringup/launch/: ekf_nodes.launch  my_laser_config.yaml  my_laser_filter.launch  navsat_transform_node.launch  purepursuit.launch  purepursuit_marker.launch  rbcar_complete.launch  rbcar_complete_gs.launch
rbcar_viz/: CMakeLists.txt  package.xml
rbcar_viz/launch/: view_robot.launch
rbcar_viz/rviz/: demo_robot_mapping.rviz  robot.rviz
robotnik_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
robotnik_msgs/action/: SetElevator.action
robotnik_msgs/msg/: BatteryDockingStatus.msg  BatteryDockingStatusStamped.msg  Interfaces.msg  InverterStatus.msg  MotorHeadingOffset.msg  MotorsStatus.msg  Register.msg  Registers.msg  named_input_output.msg
robotnik_msgs/srv/: GetBool.srv  QueryAlarms.srv  SetEncoderTurns.srv  axis_record.srv  set_analog_output.srv  set_digital_output.srv  set_height.srv  set_mode.srv  set_odometry.srv
robotnik_sensors/: CMakeLists.txt  README.md  package.xml
robotnik_sensors/meshes/: axis_m5013.stl  axis_m5525.stl  benewake_ce30.stl  fotonic_e.stl  hokuyo3d.stl  hokuyo_urg_04lx.dae  intel_r430.dae  rslidar.dae  sick_s300.dae  sick_tim551.dae  sick_tim551.stl
robotnik_sensors/urdf/: all_sensors.urdf.xacro  axis.urdf.xacro  axis_m5013.urdf.xacro  axis_m5525.urdf.xacro  benewake_ce30.urdf.xacro  gps.urdf.xacro  gps_with_mast.urdf.xacro  hokuyo3d.urdf.xacro  hokuyo_ust10lx.urdf.xacro  hokuyo_utm30lx.urdf.xacro  imu.urdf.xacro  imu_hector_plugin.urdf.xacro  intel_d435.urdf.xacro  kinectv2.urdf.xacro  roboteq_mgs.urdf.xacro  rplidar.urdf.xacro  rslidar.urdf.xacro  sick_s300.urdf.xacro  sick_tim571.urdf.xacro  ueye_cp_gige.urdf.xacro  velodyne_vlp16.urdf.xacro  zed.urdf.xacro
teb_local_planner_tutorials/launch/: robot_carlike_in_stage.launch
(+107 files in other folders)
