<?xml version="1.0"?>
<package format="2">
  <name>ackermann_drive_teleop</name>
  <version>0.0.0</version>
  <description>The ackermann_drive_teleop package</description>

  <maintainer email="gkourosg@yahoo.gr">George Kouros</maintainer>

  <license>GPLv3</license>

  <author email="gkourosg@yahoo.gr">George Kouros</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>ackermann_msgs</depend>

  <export>
  </export>
</package>
