<?xml version="1.0"?>
<package>
  <name>rbcar_common</name>
  <version>1.0.5</version>
  <description>The rbcar_common package. It contains RBCAR common packages</description>
  
  <maintainer email="rnavarro@robotnik.es">Román Navarro</maintainer>
  <maintainer email="rguzman@robotnik.es">Roberto Guzmán</maintainer>
  <maintainer email="cvillar@robotnik.es">Carlos Villar</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/rbcar_common</url>
  <url type="repository">https://github.com/RobotnikAutomation/rbcar_common</url>
  <url type="bugtracker">https://github.com/RobotnikAutomation/rbcar_common/issues</url>

  <author email="rguzman@robotnik.es">Roberto Guzman</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <run_depend>rbcar_description</run_depend>
  <run_depend>rbcar_pad</run_depend>

  <export><metapackage/></export>

</package>
