<?xml version="1.0"?>
<package>
  <name>rbcar_control</name>
  <version>1.0.4</version>
  <description>The rbcar_control package</description>

  <maintainer email="cvillar@robotnik.es">Carlos Villar</maintainer>
  <maintainer email="rguzman@robotnik.es">Roberto Guzman</maintainer>
  <maintainer email="rnavarro@robotnik.es">Román Navarro</maintainer>
  
  <url type="website">http://wiki.ros.org/rbcar_control</url>
  <url type="repository">https://github.com/RobotnikAutomation/rbcar_sim</url>
  <url type="bugtracker">https://github.com/RobotnikAutomation/rbcar_sim/issues</url>

  <license>BSD</license>
  
  <author email="rguzman@robotnik.es">Roberto Guzman</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>robot_state_publisher</build_depend>
  <run_depend>robot_state_publisher</run_depend>

  <export>


  </export>
</package>
