<?xml version="1.0"?>
<package>
  <name>rbcar_gazebo</name>
  <version>1.0.4</version>
  <description>The rbcar_gazebo package</description>

  <maintainer email="cvillar@robotnik.es">Carlos Villar</maintainer>
  <maintainer email="rguzman@robotnik.es">Roberto Guzman</maintainer>
  <maintainer email="rnavarro@robotnik.es">Román Navarro</maintainer>

  <url type="website">http://wiki.ros.org/rbcar_gazebo</url>
  <url type="repository">https://github.com/RobotnikAutomation/rbcar_sim</url>
  <url type="bugtracker">https://github.com/RobotnikAutomation/rbcar_sim/issues</url>
  <license>BSD</license>

  <author email="rguzman@robotnik.es">Roberto Guzman</author>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>rbcar_control</build_depend>
  <build_depend>rbcar_description</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>rbcar_control</run_depend>
  <run_depend>rbcar_description</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>tf</run_depend>


  <export>

  </export>
</package>
