<?xml version="1.0"?>
<package>
  <name>rbcar_sim_bringup</name>
  <version>1.0.4</version>
  <description>The rbcar_sim_bringup package</description>

  <maintainer email="cvillar@robotnik.es">Carlos Villar</maintainer>
  <maintainer email="rguzman@robotnik.es">Roberto Guzman</maintainer>
  <maintainer email="rnavarro@robotnik.es">Román Navarro</maintainer>

  <license>BSD</license>

  <author email="rguzman@robotnik.es">Roberto Guzman</author>

  <url type="website">http://wiki.ros.org/rbcar_sim_bringup</url>
  <url type="repository">https://github.com/RobotnikAutomation/rbcar_sim</url>
  <url type="bugtracker">https://github.com/RobotnikAutomation/rbcar_sim/issues</url>
  <buildtool_depend>catkin</buildtool_depend>

  <export>

  </export>
</package>
